--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1,6 +1,6 @@
 // WSU VANCOUVER SUBTHEME MAIN STYLESHEET
 
-/* Variables */
+/* Brand colors */
 
 $red: #c60c30;
 $darkgray: #262b2d;
@@ -20,18 +20,31 @@ $dropDown: false;
 
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) {
   padding: 30px 15px 15px 15px;
-}
-
-#block-testenvironment > ul > li.active {
-  font-weight: bold;
-}
-
-#block-testenvironment > ul > li > a:hover {
-  background: none;
-}
-
-#block-testenvironment .dropdown-menu {
-  font-size: 16px;
+  li:nth-child(1) {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+    a {
+      color: $brand-primary;
+    }
+  }
+  a {
+    color: $gray-dark;
+    padding-bottom: 5px;
+  }
+  a:hover {
+    background: none;
+  }
+  li.active {
+    font-weight: bold;
+  }
+  li.expanded.dropdown.active.open > ul > li:nth-child(1) {
+    text-transform: none;
+    a {
+      color: $gray-dark;
+      letter-spacing: normal;
+    }
+  }
 }
 
 /* Navbar */
@@ -217,17 +230,26 @@ body > nav > div.navbar-header > button {
 
 /* Main content */
 
-.region.region-content {
+.region-content {
   margin-top: 30px;
 }
 
-.region.region-content a {
+.region-content a {
   text-decoration: underline;
 }
 
-.page-header {
-  margin-left: 20px;
-  margin-right: 20px;
+.region-content ul,
+.region-content ol {
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
+#user-login-form,
+ul.tabs--primary,
+h1.page-header,
+h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
+  margin-right: 25px;
+  margin-left: 25px;
 }
 
 .breadcrumb {
@@ -243,6 +265,7 @@ body > nav > div.navbar-header > button {
 
 .well {
   margin-top: 25px;
+  padding-left: 0;
   border: 0;
   box-shadow: none;
 }
@@ -250,26 +273,6 @@ body > nav > div.navbar-header > button {
 h2.block-title {
   margin-top: 5px;
 }
-
-#user-login-form,
-#collapseExample > div,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div p,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div h2,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div h3,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div h4,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div h5,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div h6,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div ul,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div ol,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div table,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div blockquote,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div code
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div iframe,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div form,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > nav > ul,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > div > div {
-  margin: 20px;
-} /* Add margin back to counteract edge to edge Bootstrap containers */
 
 body > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article > div > div table {
   max-width: 92%;
