--- a/css/style.css
+++ b/css/style.css
@@ -6282,28 +6282,6 @@ body {
 
 /* Brand colors */
 /* Navbar colors */
-/* Primary (left navigation block) */
-body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) {
-  padding: 30px 15px 15px 15px; }
-  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li:nth-child(1) {
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 1px; }
-    body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li:nth-child(1) a {
-      color: #981e32; }
-  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) a {
-    color: #333333;
-    padding-bottom: 5px; }
-  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) a:hover {
-    background: none; }
-  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li.active {
-    font-weight: bold; }
-  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li.expanded.dropdown.active.open > ul > li:nth-child(1) {
-    text-transform: none; }
-    body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li.expanded.dropdown.active.open > ul > li:nth-child(1) a {
-      color: #333333;
-      letter-spacing: normal; }
-
 /* Navbar */
 .dropdown-menu {
   box-shadow: none;
@@ -6375,7 +6353,8 @@ body > nav > div.navbar-header > button {
   margin-right: 20px; }
 
 #bs-primary-navbar-collapse-1 .input-group {
-  background: #981e32; }
+  background: #981e32;
+  width: 100%; }
 
 #bs-primary-navbar-collapse-1 > div > form > div > input {
   border: none;
@@ -6443,9 +6422,32 @@ body > nav > div.navbar-header > button {
   .header-logo .col-md-12 {
     display: none; } }
 
+/* Primary (left navigation block) */
+body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) {
+  padding: 30px 15px 15px 15px; }
+  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li:nth-child(1) {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px; }
+    body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li:nth-child(1) a {
+      color: #981e32; }
+  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) a {
+    color: #333333;
+    padding-bottom: 3px; }
+  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) a:hover {
+    background: none; }
+  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li.active {
+    font-weight: bold; }
+  body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li.expanded.dropdown.active.open > ul > li:nth-child(1) {
+    text-transform: none; }
+    body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) li.expanded.dropdown.active.open > ul > li:nth-child(1) a {
+      color: #333333;
+      letter-spacing: normal; }
+
 /* Main content */
 .region-content {
-  margin-top: 30px; }
+  margin-top: 30px;
+  margin-bottom: 20px; }
 
 .region-content a {
   text-decoration: underline; }
@@ -6455,12 +6457,21 @@ body > nav > div.navbar-header > button {
   margin-right: 25px;
   margin-left: 25px; }
 
+.table > tbody > tr > th {
+  border: none; }
+
+hr {
+  margin: 40px; }
+
 #user-login-form,
 ul.tabs--primary,
 h1.page-header,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
   margin-right: 25px;
   margin-left: 25px; }
+
+ul.tabs--primary {
+  margin-bottom: 25px; }
 
 .breadcrumb {
   background-color: #fff;
