--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -16,37 +16,6 @@ $colDefault: #fff;
 $colHighlight: #fff;
 $dropDown: false;
 
-/* Primary (left navigation block) */
-
-body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) {
-  padding: 30px 15px 15px 15px;
-  li:nth-child(1) {
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 1px;
-    a {
-      color: $brand-primary;
-    }
-  }
-  a {
-    color: $gray-dark;
-    padding-bottom: 5px;
-  }
-  a:hover {
-    background: none;
-  }
-  li.active {
-    font-weight: bold;
-  }
-  li.expanded.dropdown.active.open > ul > li:nth-child(1) {
-    text-transform: none;
-    a {
-      color: $gray-dark;
-      letter-spacing: normal;
-    }
-  }
-}
-
 /* Navbar */
 
 .dropdown-menu {
@@ -148,6 +117,7 @@ body > nav > div.navbar-header > button {
 
 #bs-primary-navbar-collapse-1 .input-group {
   background: $brand-primary;
+  width: 100%;
 }
 
 #bs-primary-navbar-collapse-1 > div > form > div > input {
@@ -228,10 +198,42 @@ body > nav > div.navbar-header > button {
   }
 }
 
+/* Primary (left navigation block) */
+
+body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(1) {
+  padding: 30px 15px 15px 15px;
+  li:nth-child(1) {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+    a {
+      color: $brand-primary;
+    }
+  }
+  a {
+    color: $gray-dark;
+    padding-bottom: 3px;
+  }
+  a:hover {
+    background: none;
+  }
+  li.active {
+    font-weight: bold;
+  }
+  li.expanded.dropdown.active.open > ul > li:nth-child(1) {
+    text-transform: none;
+    a {
+      color: $gray-dark;
+      letter-spacing: normal;
+    }
+  }
+}
+
 /* Main content */
 
 .region-content {
   margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .region-content a {
@@ -244,12 +246,24 @@ body > nav > div.navbar-header > button {
   margin-left: 25px;
 }
 
+.table > tbody > tr > th {
+  border: none;
+}
+
+hr {
+  margin: 40px;
+}
+
 #user-login-form,
 ul.tabs--primary,
 h1.page-header,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
   margin-right: 25px;
   margin-left: 25px;
+}
+
+ul.tabs--primary {
+  margin-bottom: 25px;
 }
 
 .breadcrumb {
