--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -325,6 +325,10 @@ ul.tabs--primary {
   background-color: transparent;
 }
 
+.well img {
+  max-width: 100%;
+}
+
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2),
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) {
   a {
@@ -332,7 +336,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   }
 }
 
-h2.block-title {
+h2.block-title, .well img {
   margin-top: 25px;
 }
 
