Align search field edge with Secondary sidebar column

--- a/css/style.css
+++ b/css/style.css
@@ -6361,7 +6361,8 @@ body > nav > div.navbar-header > button {
 
 #bs-primary-navbar-collapse-1 .input-group {
   background: #981e32;
-  width: 100%; }
+  width: 100%;
+  margin-left: 25px; }
 
 #bs-primary-navbar-collapse-1 > div > form > div > input {
   border: none;
@@ -6413,6 +6414,8 @@ body > nav > div.navbar-header > button {
   #bs-primary-navbar-collapse-1 > div > form {
     margin-right: 30px;
     margin-left: 15px; }
+  #bs-primary-navbar-collapse-1 .input-group {
+    margin-left: 0; }
   #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a:hover {
     text-decoration: underline; } }
 
