--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -11,8 +11,13 @@
  *   - title: The menu link title.
  *   - url: The menu link url, instance of \Drupal\Core\Url
  *   - localized_options: Menu link localized options.
+ *   - is_expanded: TRUE if the link has visible children within the current
+ *     menu tree.
+ *   - is_collapsed: TRUE if the link has children within the current menu tree
+ *     that are not currently visible.
+ *   - in_active_trail: TRUE if the link is in the active trail.
  *
- * @ingroup templates
+ * @ingroup themeable
  */
 #}
 {% import _self as menus %}
@@ -27,28 +32,16 @@
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-      <ul{{ attributes.addClass('menu', 'nav') }}>
+      <ul{{ attributes }}>
     {% else %}
-      <ul{{ attributes.addClass('dropdown-menu') }}>
+      <ul>
     {% endif %}
     {% for item in items %}
-      {%
-        set item_classes = [
-          item.is_expanded? 'expanded',
-          item.is_expanded and menu_level == 0 ? 'dropdown',
-          item.in_active_trail ? 'active',
-        ]
-      %}
-      {% if menu_level == 0 and item.is_expanded %}
-        <li{{ item.attributes.addClass(item_classes) }}>
-        <a href="{{ item.url }}" class="dropdown-toggle" data-target="#" data-toggle="dropdown">{{ item.title }} <span class="caret"></span></a>
-      {% else %}
-        <li{{ item.attributes.addClass(item_classes) }}>
+      <li{{ item.attributes }}>
         {{ link(item.title, item.url) }}
-      {% endif %}
-      {% if item.below %}
-        {{ menus.menu_links(item.below, attributes.removeClass('nav'), menu_level + 1) }}
-      {% endif %}
+        {% if item.below %}
+          {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
+        {% endif %}
       </li>
     {% endfor %}
     </ul>
