--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -284,7 +284,7 @@ body > nav > div.navbar-header > button {
   }
 }
 
-.region-content button.btn {
+.region-content button.btn-primary {
   margin: 10px 10px 10px 25px;
   padding: 10px 15px 10px 15px;
   box-shadow: none;
