Fix display bug for navbar when resizing browser window

--- a/css/style.css
+++ b/css/style.css
@@ -6362,7 +6362,7 @@ body > nav > div.navbar-header > button {
 #bs-primary-navbar-collapse-1 .input-group {
   background: #981e32;
   width: 100%;
-  margin-left: 25px; }
+  padding-left: 25px; }
 
 #bs-primary-navbar-collapse-1 > div > form > div > input {
   border: none;
