--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -128,7 +128,7 @@ body > nav > div.navbar-header > button {
 #bs-primary-navbar-collapse-1 .input-group {
   background: $brand-primary;
   width: 100%;
-  margin-left: 25px;
+  padding-left: 25px;
 }
 
 #bs-primary-navbar-collapse-1 > div > form > div > input {
