--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -187,7 +187,7 @@ body > nav > div.navbar-header > button {
     margin-left: 15px;
   }
   #bs-primary-navbar-collapse-1 .input-group {
-    margin-left: 0;
+    padding-left: 0;
   }
   #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a:hover {
     text-decoration: underline;
