--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -15,7 +15,7 @@ $icon-font-path: '/Users/brianbates1d/Sites/devdesktop/drupal-8/themes/bootstrap
 
 // SCAFFOLDING
 
-$text-color: #4c4c4c;
+$text-color: #595959;
 
 // FONT
 
