Fix user account login button

--- a/css/style.css
+++ b/css/style.css
@@ -6522,6 +6522,9 @@ h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
   margin-right: 25px;
   margin-left: 25px; }
 
+#edit-submit {
+  margin-left: 0; }
+
 ul.tabs--primary {
   margin-bottom: 25px; }
   ul.tabs--primary li {
