--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -331,6 +331,10 @@ h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
   margin-left: 25px;
 }
 
+#edit-submit {
+  margin-left: 0;
+}
+
 ul.tabs--primary {
   margin-bottom: 25px;
   li {
