--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -103,11 +103,11 @@
             </li>
         </ul>
         <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search">
+            <form action="/search/node" method="get" class="navbar-form" role="search">
                 <div class="input-group" tabindex="2">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
+                    <input data-drupal-selector="edit-keys" class="form-search form-control" placeholder="Search" type="search" id="edit-keys" name="keys" value="">
                     <div class="input-group-btn" aria-hidden="true">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" type="submit" value="Search"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
             </form>
