--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -125,9 +125,13 @@
 
 <!-- MAIN CONTENT -->
 
+<div class="container-max-width">
+
     {{ page_top }}
     {{ page }}
     {{ page_bottom }}
+
+</div>
 
 <!-- FOOTER SITEMAP -->
 
