--- a/scss/style.css
+++ b/scss/style.css
@@ -6436,40 +6436,45 @@ body > nav > div.navbar-header > button {
     display: none; } }
 
 /* Primary (left block and navigation region) */
-.region-sidebar-first {
-  margin-top: 30px; }
-  .region-sidebar-first a {
-    color: #262b2d; }
-  .region-sidebar-first ul li {
+/* .region-sidebar-first {
+  margin-top: 30px;
+  a {
+    color: $darkgray;
+  }
+  ul li {
     list-style-type: none;
-    padding: 5px; }
-    .region-sidebar-first ul li ul {
-      margin-bottom: -6px; }
-      .region-sidebar-first ul li ul li:nth-child(1) {
+    padding: 5px;
+    ul {
+      margin-bottom: -6px;
+      li:nth-child(1) {
         text-transform: none;
         font-weight: normal;
-        letter-spacing: normal; }
-        .region-sidebar-first ul li ul li:nth-child(1) a {
-          color: #262b2d; }
-  .region-sidebar-first li a.is-active {
-    font-weight: bold; }
-  .region-sidebar-first li:nth-child(1) {
+        letter-spacing: normal;
+        a {
+          color: $darkgray;
+        }
+      }
+    }
+  }
+  li a.is-active {
+    font-weight: bold;
+  }
+  li:nth-child(1) {
     text-transform: uppercase;
     font-weight: bold;
-    letter-spacing: 1px; }
-    .region-sidebar-first li:nth-child(1) a {
-      color: #981e32; }
-
+    letter-spacing: 1px;
+    a {
+      color: $brand-primary;
+    }
+  }
+} */
 /* Main content */
-.container-max-width {
-  max-width: 1920px;
-  margin: auto; }
-
 .region-content {
   margin-top: 30px;
   margin-bottom: 20px; }
 
 .region-content p + h2, .region-content p + h3, .region-content p + h4,
+.region-content ul + p, .region-content ol + p,
 .region-content table + h2, .region-content table + h3 {
   margin-top: 35px; }
 
@@ -6479,12 +6484,9 @@ body > nav > div.navbar-header > button {
 .region-content a {
   text-decoration: underline; }
 
-.region-content h4.label {
-  color: #262b2d; }
-
 .field--item > ul,
 .field--item > ol {
-  margin-left: 18px; }
+  margin-left: 30px; }
 
 .region-content ul li,
 .region-content ol li {
@@ -6545,27 +6547,6 @@ ul.tabs--primary {
     margin-top: -30px; } }
 
 /* Main content - search results */
-#search-form {
-  margin-right: 25px;
-  margin-left: 25px; }
-
-#edit-basic > div > div.input-group > span > button {
-  margin-top: 0;
-  padding: 7px 11px 7px 11px; }
-
-#edit-keys {
-  box-shadow: none; }
-
-#edit-keys--description,
-.search-help-link {
-  display: none; }
-
-div.region.region-content > ol {
-  margin-left: 18px; }
-
-#edit-submit--2 {
-  margin-left: 0; }
-
 /* Secondary (right sidebar block region) */
 .well {
   padding-left: 0;
