--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -253,10 +253,10 @@ body > nav > div.navbar-header > button {
 
 /* Main content */
 
-.container-max-width {
+/* .container-max-width {
   max-width: 1920px;
   margin: auto;
-}
+} */
 
 .region-content {
   margin-top: 30px;
@@ -270,9 +270,9 @@ body > nav > div.navbar-header > button {
   }
 }
 
-.region-content h2:nth-child(1) {
+/* .region-content h2:nth-child(1) {
   margin-top: 0;
-}
+} */
 
 .region-content a {
   text-decoration: underline;
@@ -360,6 +360,33 @@ ul.tabs--primary {
     margin-top: -30px;
   }
 }
+
+/* Main content - Bootstrap paragraphs */
+
+.paragraph__column {
+  blockquote {
+    margin-top: 1.25em;
+  }
+}
+
+.paragraph--type--bp-image {
+  margin-top: 2em;
+}
+
+.paragraph--type--xeno-hero__image {
+  background-color: $white;
+  background-size: cover;
+}
+
+.paragraph--type--bp-columns {
+  margin-top: 2em;
+}
+
+/* @media (max-width: 767px) {
+   .paragraph--type--xeno-hero__image {
+    background-attachment: fixed;
+  }
+} */
 
 /* Main content - search results */
 
