--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -30,6 +30,16 @@ hr {
   margin: 40px;
 }
 
+::selection {
+  background: $darkgray;
+  color: $white;
+}
+
+::-moz-selection {
+  background: $darkgray;
+  color: $white;
+}
+
 /* Navbar */
 
 .dropdown-menu {
@@ -270,6 +280,10 @@ body > nav > div.navbar-header > button {
   }
 }
 
+.region-content p {
+  line-height: 1.6em;
+}
+
 /* .region-content h2:nth-child(1) {
   margin-top: 0;
 } */
@@ -319,12 +333,14 @@ body > nav > div.navbar-header > button {
 }
 
 .table > tbody > tr > th {
-  border: none;
-  padding: 10px 10px 10px 0;
+  padding: 15px;
+  background: $brand-primary;
+  color: $white;
 }
 
 .table > tbody > tr > td {
-  padding: 10px 10px 10px 0;
+  padding: 15px;
+  background: $lightestgray;
 }
 
 .region-content table {
@@ -382,11 +398,20 @@ ul.tabs--primary {
   margin-top: 2em;
 }
 
-/* @media (max-width: 767px) {
-   .paragraph--type--xeno-hero__image {
+h2.hero-title {
+  text-align: center;
+  font-size: 5.5em;
+  text-shadow: 2px 2px 3px black;
+}
+
+@media (max-width: 767px) {
+  h2.hero-title {
+    font-size: 3em;
+  }
+  .paragraph--type--xeno-hero__image {
     background-attachment: fixed;
   }
-} */
+}
 
 /* Main content - search results */
 
